src/snapshots/enderpy__lexer__tests__numeric-hexadecimal-0.snap
---
source: src/lexer.rs
description: "0x0"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x0",
        ),
        start: 0,
        end: 3,
    },
]
