src/snapshots/enderpy__lexer__tests__numeric-hexadecimal-1.snap
---
source: src/lexer.rs
description: "0x1"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x1",
        ),
        start: 0,
        end: 3,
    },
]
