src/snapshots/enderpy__lexer__tests__numeric-hexadecimal-11.snap
---
source: src/lexer.rs
description: "0xb"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xb",
        ),
        start: 0,
        end: 3,
    },
]
