src/snapshots/enderpy__lexer__tests__numeric-hexadecimal-12.snap
---
source: src/lexer.rs
description: "0xc"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xc",
        ),
        start: 0,
        end: 3,
    },
]
