src/snapshots/enderpy__lexer__tests__numeric-hexadecimal-13.snap
---
source: src/lexer.rs
description: "0xd"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xd",
        ),
        start: 0,
        end: 3,
    },
]
